Add English translations for shift template break times

--- a/src/Nobetci.Web/Views/App/Index.cshtml
+++ b/src/Nobetci.Web/Views/App/Index.cshtml
@@ -34,21 +34,21 @@
                     <span class="tpl-color" style="background:#22C55E"></span>
                     <span class="tpl-info">
                         <span class="tpl-time">08:00 - 17:00</span>
-                        <span class="tpl-meta">60dk mola</span>
+                        <span class="tpl-meta">@(isTurkish ? "60dk mola" : "60min break")</span>
                     </span>
                 </button>
                 <button class="tpl-btn-row" data-start="08:00" data-end="16:30" data-spans="false" data-break="30" data-color="#3B82F6">
                     <span class="tpl-color" style="background:#3B82F6"></span>
                     <span class="tpl-info">
                         <span class="tpl-time">08:00 - 16:30</span>
-                        <span class="tpl-meta">30dk mola</span>
+                        <span class="tpl-meta">@(isTurkish ? "30dk mola" : "30min break")</span>
                     </span>
                 </button>
                 <button class="tpl-btn-row" data-start="09:00" data-end="18:00" data-spans="false" data-break="60" data-color="#8B5CF6">
                     <span class="tpl-color" style="background:#8B5CF6"></span>
                     <span class="tpl-info">
                         <span class="tpl-time">09:00 - 18:00</span>
-                        <span class="tpl-meta">60dk mola</span>
+                        <span class="tpl-meta">@(isTurkish ? "60dk mola" : "60min break")</span>
                     </span>
                 </button>
                 <button class="tpl-btn-row overnight" data-start="16:00" data-end="08:00" data-spans="true" data-break="0" data-color="#EF4444">
@@ -63,7 +63,7 @@
                     <span class="tpl-color" style="background:#DC2626"></span>
                     <span class="tpl-info">
                         <span class="tpl-time">08:00 - 08:00</span>
-                        <span class="tpl-meta">24 saat</span>
+                        <span class="tpl-meta">@(isTurkish ? "24 saat" : "24 hours")</span>
                     </span>
                     <span class="tpl-badge-new">+1</span>
                 </button>
